@@ -105,6 +105,8 @@ setMethod(
     nFilterDims=defaultNDims(x,reduceMethod,type="filterStats"),
     nReducedDims=defaultNDims(x,reduceMethod,type="reducedDims"), 
 		k0s=4:15,
+		subsample=TRUE,
+		sequential=TRUE,
     clusterFunction="hierarchical01", #listBuiltInType01(),
     alphas=c(0.1,0.2,0.3),betas=0.9, minSizes=1,
     consensusProportion=0.7,
@@ -131,10 +133,10 @@ setMethod(
     else seqArgs[["verbose"]]<-FALSE #turn off sequential messages
     ce<-clusterMany(x,ks=k0s,clusterFunction=clusterFunction,
                     alphas=alphas,betas=betas,minSizes=minSizes,
-                    sequential=TRUE,removeSil=FALSE,subsample=TRUE,
+                    sequential=sequential,removeSil=FALSE,subsample=subsample,
                     silCutoff=0,distFunction=NA,
                     isCount=isCount,transFun=transFun,
-                    reduceMethod=reduceMethod,nFilterDims=eval(nFilterDims),
+										reduceMethod=reduceMethod,nFilterDims=eval(nFilterDims),
                     nReducedDims=eval(nReducedDims),
                     mainClusterArgs=mainClusterArgs,subsampleArgs=subsampleArgs,
                     seqArgs=seqArgs,ncores=ncores,random.seed=random.seed,run=run,
